--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ img.emoji {
     <p class="site-title"><a href="index.html">RepairMyMobile.in</a></p>
     
     <p class="site-description">One Stop Solution for Mobile Repair</p></div></div></header><nav class="nav-primary" aria-label="Main" id="genesis-nav-primary"><div class="wrap"><ul id="menu-primary" class="menu genesis-nav-menu menu-primary js-superfish"><li id="menu-item-4248" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-4248"><a href="index.html" aria-current="page"><span >Home</span></a></li>
-<li id="menu-item-14828" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14828"><a href="https://shop.repairmymobile.in/register"><span >Register Shop</span></a></li>
+<li id="menu-item-14828" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14828"><a href="#"><span >Register Shop</span></a></li>
 <li id="menu-item-4249" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-4249"><a href="#"><span >Solution</span></a>
 <ul class="sub-menu">
 	<li id="menu-item-4250" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-4250"><a href="category/flash/index.html"><span >Android Flash File Database</span></a></li>
