--- a/product-category/shop/index.html
+++ b/product-category/shop/index.html
@@ -1974,6 +1974,7 @@
           </nav>
           <p></p>
         </div>
+        <p>©gurujibiharwale.in</p>
       </footer>
     </div>
     <script type="text/javascript">
