--- a/training/miracle-box-installation-key-dongle/index.html
+++ b/training/miracle-box-installation-key-dongle/index.html
@@ -411,7 +411,7 @@ Free tutorial CD worth Rs.999</p>
 									</li>
 					</ul>
 		</div></section>
-</aside></div></div><footer class="site-footer"><div class="wrap"><nav class="nav-secondary" aria-label="Secondary"><div class="wrap"><ul id="menu-footer" class="menu genesis-nav-menu menu-secondary js-superfish"><li id="menu-item-4323" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-4323"><a href="../../privacy-policy/index.html"><span >Privacy Policy</span></a></li>
+</aside></div></div><p>©gurujibiharwale.in</p><footer class="site-footer"><div class="wrap"><nav class="nav-secondary" aria-label="Secondary"><div class="wrap"><ul id="menu-footer" class="menu genesis-nav-menu menu-secondary js-superfish"><li id="menu-item-4323" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-4323"><a href="../../privacy-policy/index.html"><span >Privacy Policy</span></a></li>
 <li id="menu-item-4324" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4324"><a href="../../firmware-credit/index.html"><span >Firmware Credit</span></a></li>
 <li id="menu-item-4333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4333"><a href="../../contact-us/index.html"><span >Contact Us</span></a></li>
 </ul></div></nav><p></p></div></footer></div>	<script type="text/javascript">
