--- a/about/index.html
+++ b/about/index.html
@@ -911,6 +911,7 @@
           </nav>
           <p></p>
         </div>
+        <p>©gurujibiharwale.in</p>
       </footer>
     </div>
     <script type="text/javascript">
