--- a/mobile-repair-technician-jobs/index.html
+++ b/mobile-repair-technician-jobs/index.html
@@ -141,7 +141,7 @@
 </aside></div></div><footer class="site-footer"><div class="wrap"><nav class="nav-secondary" aria-label="Secondary"><div class="wrap"><ul id="menu-footer" class="menu genesis-nav-menu menu-secondary js-superfish"><li id="menu-item-4323" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-4323"><a href="../privacy-policy/index.html"><span >Privacy Policy</span></a></li>
 <li id="menu-item-4324" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4324"><a href="../firmware-credit/index.html"><span >Firmware Credit</span></a></li>
 <li id="menu-item-4333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4333"><a href="../contact-us/index.html"><span >Contact Us</span></a></li>
-</ul></div></nav><p></p></div></footer></div>	<script type="text/javascript">
+</ul></div></nav><p></p></div><p>©gurujibiharwale.in</p></footer></div>	<script type="text/javascript">
 		var c = document.body.className;
 		c = c.replace(/woocommerce-no-js/, 'woocommerce-js');
 		document.body.className = c;
