--- a/product-category/boxes/index.html
+++ b/product-category/boxes/index.html
@@ -1162,6 +1162,7 @@
           </nav>
           <p></p>
         </div>
+        <p>©gurujibiharwale.in</p>
       </footer>
     </div>
     <script type="text/javascript">
