--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head ><meta charset="UTF-8" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Welcome to Repair My Mobile - RepairMyMobile.in</title>
+<title>GURUJI BIHAR WALE- Online IT Solution</title>
 	
 		<style type="text/css">
 img.wp-smiley,
