repare my mobile change :

--- a/training/advanced-turbo-flasher-atf-box/feed/index.html
+++ b/training/advanced-turbo-flasher-atf-box/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Advanced Turbo Flasher (ATF) Box Training	</title>
-	<atom:link href="https://repairmymobile.in/training/advanced-turbo-flasher-atf-box/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/advanced-turbo-flasher-atf-box/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/advanced-turbo-flasher-atf-box/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/advanced-turbo-flasher-atf-box/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Fri, 06 Apr 2018 07:19:16 +0000</lastBuildDate>
 	<sy:updatePeriod>
