--- a/training/gpg-dragon-box/feed/index.html
+++ b/training/gpg-dragon-box/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: GPG Dragon Box Training	</title>
-	<atom:link href="https://repairmymobile.in/training/gpg-dragon-box/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/gpg-dragon-box/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/gpg-dragon-box/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/gpg-dragon-box/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Fri, 06 Apr 2018 09:54:05 +0000</lastBuildDate>
 	<sy:updatePeriod>
