--- a/training/infinity-box/feed/index.html
+++ b/training/infinity-box/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Infinity Box Online Training	</title>
-	<atom:link href="https://repairmymobile.in/training/infinity-box/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/infinity-box/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/infinity-box/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/infinity-box/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Fri, 06 Apr 2018 12:12:46 +0000</lastBuildDate>
 	<sy:updatePeriod>
