--- a/training/miracle-box/feed/index.html
+++ b/training/miracle-box/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: How to use Miracle Thunder Box: Complete Training Guide	</title>
-	<atom:link href="https://repairmymobile.in/training/miracle-box/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/miracle-box/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/miracle-box/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/miracle-box/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Fri, 07 Aug 2020 09:40:19 +0000</lastBuildDate>
 	<sy:updatePeriod>
