--- a/training/mx-key/feed/index.html
+++ b/training/mx-key/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: MX Key Training	</title>
-	<atom:link href="https://repairmymobile.in/training/mx-key/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/mx-key/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/mx-key/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/mx-key/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Mon, 09 Apr 2018 06:12:52 +0000</lastBuildDate>
 	<sy:updatePeriod>
