--- a/training/samsung-frp-training/feed/index.html
+++ b/training/samsung-frp-training/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Samsung FRP Training at just Rs. 99	</title>
-	<atom:link href="https://repairmymobile.in/training/samsung-frp-training/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/samsung-frp-training/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/samsung-frp-training/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/samsung-frp-training/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Fri, 07 Aug 2020 09:46:58 +0000</lastBuildDate>
 	<sy:updatePeriod>
