--- a/training/umt-dongle-training/feed/index.html
+++ b/training/umt-dongle-training/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: UMT Dongle Training	</title>
-	<atom:link href="https://repairmymobile.in/training/umt-dongle-training/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/umt-dongle-training/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/umt-dongle-training/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/umt-dongle-training/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Fri, 07 Aug 2020 09:45:40 +0000</lastBuildDate>
 	<sy:updatePeriod>
