--- a/training/miracle-box-installation-key-dongle/feed/index.html
+++ b/training/miracle-box-installation-key-dongle/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Miracle Box with key Dongle: Installation	</title>
-	<atom:link href="https://repairmymobile.in/training/miracle-box-installation-key-dongle/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/miracle-box-installation-key-dongle/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/miracle-box-installation-key-dongle/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/miracle-box-installation-key-dongle/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Thu, 05 Apr 2018 07:09:18 +0000</lastBuildDate>
 	<sy:updatePeriod>
