--- a/training/uct-box/feed/index.html
+++ b/training/uct-box/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: UCT box Online Training	</title>
-	<atom:link href="https://repairmymobile.in/training/uct-box/feed/" rel="self" type="application/rss+xml" />
-	<link>https://repairmymobile.in/training/uct-box/</link>
+	<atom:link href="https://https://gurujibiharwale.in//training/uct-box/feed/" rel="self" type="application/rss+xml" />
+	<link>https://https://gurujibiharwale.in//training/uct-box/</link>
 	<description>One Stop Solution for Mobile Repair</description>
 	<lastBuildDate>Wed, 04 Apr 2018 11:34:03 +0000</lastBuildDate>
 	<sy:updatePeriod>
